Archiving from Micro.blog.

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@ Generally, a <code>FIXME</code> or a <code>TODO</code> is usually smaller than a
 </code></pre></div><p>And then, here&rsquo;s the trick. <strong>A lot of IDE and editors allow filtering comments based on regular expressions!</strong></p>
 <p>In my case, I mostly use Goland nowadays, but it works in all JetBrains products.</p>
 <p>Go to the TODO tab, click on the filter icon, select <em>Edit filters</em>, and add something like this:</p>
-<p><img src="https://cdn.uploads.micro.blog/123741/2023/fa5409f49e.png" alt="My TODO filters" title="My TODO filters"></p>
+<p><img src="https://alexsaezm.com/uploads/2023/fa5409f49e.png" alt="My TODO filters" title="My TODO filters"></p>
 <p>And enjoy your useful comments!</p>
 
 		</div>
